compiler/testData/diagnostics/tests/duplicateJvmSignature/functionAndProperty/classObject.kt
class C {
    default object {
        <!CONFLICTING_JVM_DECLARATIONS!>val x<!> = 1
        <!CONFLICTING_JVM_DECLARATIONS!>fun getX()<!> = 1
    }
}